--- a/package.json
+++ b/package.json
@@ -6,19 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky",
+    "eslintCheck": "eslint src --max-warnings=0",
+    "tsCheck": "tsc --noEmit",
+    "prettierCheck": "prettier --check src/**/*",
+    "format": "prettier --ignore-path .gitignore --write src/**/* next.config.mjs",
+    "test": "npm run lint && npm run eslintCheck && npm run tsCheck && npm run format"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "axios": "^1.6.8",
+    "classnames": "^2.5.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-css-modules": "^2.12.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
+    "husky": "^9.0.11",
+    "i18next": "^23.11.3",
+    "lodash-es": "^4.17.21",
+    "next": "14.2.3",
+    "prettier": "^3.2.5",
     "react": "^18",
+    "react-aria": "^3.33.0",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "sass": "^1.77.1",
+    "typescript": "^5"
   }
 }
