header changes, config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@components/*": ["./src/components/*"],
+      "@design-system/*": ["./src/design-system/*"],
+    },
+    "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
