--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "npm run lint && npm run eslintCheck && npm run tsCheck && npm run format"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@types/lodash-es": "^4.17.12",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "axios": "^1.6.8",
@@ -26,13 +27,15 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
     "husky": "^9.0.11",
-    "i18next": "^23.11.3",
+    "i18next": "^23.12.2",
     "lodash-es": "^4.17.21",
     "next": "14.2.3",
+    "next-i18next": "^15.3.0",
     "prettier": "^3.2.5",
     "react": "^18",
     "react-aria": "^3.33.0",
     "react-dom": "^18",
+    "react-i18next": "^15.0.0",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
