--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "husky": "^9.0.11",
     "i18next": "^23.12.2",
     "lodash-es": "^4.17.21",
-    "next": "14.2.3",
+    "next": "^15.0.3",
     "next-i18next": "^15.3.0",
     "prettier": "^3.2.5",
+    "process": "^0.11.10",
     "react": "^18",
     "react-aria": "^3.33.0",
     "react-dom": "^18",
