--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash-es": "^4.17.21",
     "next": "^15.0.3",
     "next-i18next": "^15.3.0",
+    "nprogress": "^0.2.0",
     "prettier": "^3.2.5",
     "process": "^0.11.10",
     "react": "^18",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
