--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
+    "formidable": "^3.5.2",
     "husky": "^9.0.11",
     "i18next": "^23.12.2",
     "lodash-es": "^4.17.21",
     "next": "^15.0.3",
     "next-i18next": "^15.3.0",
+    "nodemailer": "^6.9.16",
     "nprogress": "^0.2.0",
     "prettier": "^3.2.5",
     "process": "^0.11.10",
@@ -46,7 +48,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
