--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash-es": "^4.17.21",
     "next": "^15.0.3",
     "next-i18next": "^15.3.0",
+    "next-seo": "^6.6.0",
     "nodemailer": "^6.9.16",
     "nprogress": "^0.2.0",
     "prettier": "^3.2.5",
