--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.53.2",
     "react-i18next": "^15.0.0",
     "react-stately": "^3.34.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.1.1",
     "zod": "^3.23.8"
   },
